<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="FB_Remote" Id="{26b9ef8a-bd47-4ae3-bad5-31fb25883213}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Remote
VAR_INPUT
		
END_VAR
VAR_OUTPUT
	
END_VAR
VAR
	// Udp interface
	txUdpData			: RemoteFeedback;
	rxUdpData			: RemoteControl;
	
	ipAddr 				: UDINT;
	remotePort 			: UINT;
	localPort 			: UINT;
	
	udpClient 			: FB_UdpClient(ipAddr, remotePort, localPort, SIZEOF(txUdpData), ADR(txUdpData), SIZEOF(rxUdpData), ADR(rxUdpData));
	
	// Remote data exhange
	
	
END_VAR

]]></Declaration>
    <Implementation>
      <ST><![CDATA[

txUdpData.em1500 := MAIN.em1500.feedback;
txUdpData.em8000 := MAIN.em8000.feedback;

udpClient();



]]></ST>
    </Implementation>
    <Method Name="FB_init" Id="{1759a608-ff26-4666-ba56-016a8cefa645}">
      <Declaration><![CDATA[METHOD FB_init : BOOL
VAR_INPUT
	bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
	bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
	
	// Contructor arguments
	_ipAddr 			: UDINT;
	_remotePort 		: UINT;
	_localPort 			: UINT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Initilize parameters
ipAddr := _ipAddr;
remotePort := _remotePort;
localPort := _localPort;

// Construct FB_UdpClient
udpClient.FB_init(
		bInitRetains, 
		bInCopyCode, 
		ipAddr, 
		remotePort, 
		localPort, 
		SIZEOF(txUdpData), 
		ADR(txUdpData), 
		SIZEOF(rxUdpData), 
		ADR(rxUdpData)
	);

]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_Remote">
      <LineId Id="81" Count="0" />
      <LineId Id="104" Count="0" />
      <LineId Id="134" Count="0" />
      <LineId Id="103" Count="0" />
      <LineId Id="80" Count="0" />
      <LineId Id="106" Count="1" />
      <LineId Id="101" Count="1" />
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_Remote.FB_init">
      <LineId Id="27" Count="0" />
      <LineId Id="25" Count="1" />
      <LineId Id="23" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="38" Count="9" />
      <LineId Id="17" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>